--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Build Android App
 
-        run: flutter build apk  --target-platform=android-arm64  --no-sound-null-safety
+        run: flutter build apk — release — split-per-abi
 
       # - name: Build iOS App
 
@@ -96,8 +96,5 @@ jobs:
 
         with:
 
-          tag: FAMILY_TREE.v1.0.${{ github.run_number }}
-
-          name: FAMILY_TREE.v1.0.${{ github.run_number }}
-
+          token: ${{ secrets.GITHUB_TOKEN }}
           artifacts: 'build/app/outputs/apk/release/*.apk'
