--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Build Android App
 
-        run: flutter build apk — release — split-per-abi
+        run: flutter build apk --split-per-abi --release
 
       # - name: Build iOS App
 
