--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -95,6 +95,13 @@ jobs:
         uses: ncipollo/release-action@v1
 
         with:
+         
 
+      
+          tag: FAMILY_TREE.v1.0.${{ github.run_number }}
+          
+          name: FAMILY_TREE.v1.0.${{ github.run_number }}
+          
           token: ${{ secrets.GITHUB_TOKEN }}
+          
           artifacts: 'build/app/outputs/apk/release/*.apk'
